# Agentic_Audit_Assistant

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
Uebungsdaten_Muster_Verpackungen/Uebungsdaten Muster Verpackungen/AV/: Anlagen.txt  Anlagenbuchungen.txt
Uebungsdaten_Muster_Verpackungen/Uebungsdaten Muster Verpackungen/Begleitdokumente/: Buchungen_Folgeperiode_2026.csv  Fakturajournal_2025.csv  Fakturajournal_Januar_2026_Kreditoren.csv  Freigabe-Log_Journale_2025.csv  Gesellschafterliste_Beteiligungen.csv  Kreditlimitliste_Debitoren_2025.csv  Stammdatenaenderungen_2025.csv  Warenausgangsliste_2025.csv  Wareneingangsliste_2025.csv
Uebungsdaten_Muster_Verpackungen/Uebungsdaten Muster Verpackungen/Debitoren/: Kunden.txt  Kundenbuchungen.txt
Uebungsdaten_Muster_Verpackungen/Uebungsdaten Muster Verpackungen/Kreditoren/: Lieferanten.txt  Lieferantenbuchungen.txt
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
audit_core/: __init__.py  cli.py  discovery.py  engine.py  graph.py  models.py  parsers.py  qa.py  rules.py
audit_core/integrations/: __init__.py  cognee.py  status.py
docs/: ai-agent-handoff.md  architecture.md  deterministic-rules.md  evidence-graph-schema.md  ingestion-discovery.md  layman-explainer.md
scripts/: start-local.ps1  stop-local.ps1
services/: __init__.py
services/api/: Dockerfile  __init__.py  jobs.py  main.py
tests/: factories.py  test_detector_scenarios.py  test_discovery.py  test_extended_rules.py  test_pdf_ingestion.py  test_sample_rules.py  test_workflows.py
(+8 files in other folders)
