[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-audit-assistant"
version = "0.1.0"
description = "Evidence-first audit analytics for mixed financial dossiers"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "openai>=1.100,<3",
  "openpyxl>=3.1,<4",
  "pydantic>=2.11,<3",
  "pypdf>=6,<7",
  "python-docx>=1.2,<2",
  "python-dotenv>=1.2,<2",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.4,<9", "pytest-cov>=6.2,<7", "ruff>=0.12,<1"]

[project.scripts]
audit-assistant = "audit_core.cli:main"

[tool.setuptools]
packages = ["audit_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
